# solana_workspace_example

./: .gitignore  README.org  solana-code.org  solana_account.org  solana_dapp_basic_design.org  solana_ebook.org
add_memo_to_transaction_example/: Cargo.toml
add_memo_to_transaction_example/src/: main.rs
calculate_transaction_cost_example/: Cargo.toml
calculate_transaction_cost_example/src/: main.rs
calculator-dapp-solana/: .pnp.cjs  Anchor.toml
calculator-dapp-solana/tests/: calculator-dapp-solana.ts
counter/: Anchor.toml
data_holder_reader_example/data_holder/: .pnp.cjs  Anchor.toml
data_holder_reader_example/data_reader/: Anchor.toml
data_holder_reader_example/data_reader_client/: Cargo.toml
data_holder_reader_example/read_other_program_data/: Cargo.toml
pda_limitation/: .pnp.cjs  Anchor.toml  Cargo.toml
pda_limitation/programs/pda_limitation/: Cargo.toml
pda_limitation/programs/pda_limitation/src/: context.rs  lib.rs
pda_limitation/programs/pda_limitation/src/contexts/: context.rs
pda_limitation/tests/: pda_limitation.ts
pda_limitation/todo_client/: Cargo.toml  README.md  README.org
pda_limitation/todo_client/src/: main.rs
pda_limitation/todo_client_idl/: Cargo.toml  README.md  README.org  pda_limitation.json
pda_limitation/todo_client_idl/src/: main.rs
python_code/: solana_python_doc.org
rust_code/add_priority_fees_to_transaction_example/: Cargo.toml
rust_code/counter_idl_example/: Cargo.toml
rust_code/counter_idl_example/idls/: counter.json
rust_code/counter_idl_example/src/: main.rs
rust_code/create_account_example/: Cargo.toml
rust_code/create_keypair/: .gitignore  Cargo.toml
rust_code/create_token_account_and_mint_example/: Cargo.toml
rust_code/delegate_token_accounts/: Cargo.toml
rust_code/get_account_balance_example/: Cargo.toml
rust_code/get_test_sol_example/: Cargo.toml
rust_code/restore_keypair/: Cargo.toml
rust_code/sign_and_verify_a_message/: Cargo.toml
rust_code/sign_pda_account/: Cargo.toml  README.org
rust_code/solana_get_genesis_hash_example/: Cargo.toml
rust_code/solana_token_balance/: Cargo.toml
rust_code/subscribing_to_events_example/: Cargo.toml
rust_code/validate_public_key/: Cargo.toml
rust_code/verify_keypair/: Cargo.toml
stake_program_example/: .pnp.cjs  Anchor.toml  Cargo.toml  README.md
stake_program_example/stake_client/: Cargo.toml
stake_program_example/stake_client/src/: idl_based_client.rs  main.rs
stake_program_example/tests/: stake_program_example.ts
stake_program_project/: .pnp.cjs  Anchor.toml  Cargo.toml
stake_program_project/client/: Cargo.toml  README.md  test_client.sh
stake_program_project/client/src/: main.rs
stake_program_project/tests/: stake_program_project.ts
typescript_code/: solana_typescript.org
typescript_code/bip_example/: README.md  package.json
(+59 files in other folders)
