[package]
name = "todo_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = "0.31.1"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1"
solana-client = "2.3.5"
solana-sdk = "2.3.1"
solana-system-interface = "1.0.0"
tokio = { version = "1.46", features = ["full"] }
