[package]
name = "stake_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = "0.31.1"
anchor-lang = "0.31.1"
anyhow = "1.0"
dirs = "6.0"
serde = "1.0"
serde_json = "1.0"
solana-program = "2.3.0"
solana-sdk = "2.3.1"
solana-system-interface = "1.0.0"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
tokio = { version = "1.46", features = ["full"] }
