[package]
name = "stake-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = "0.31.1"
anchor-lang = "0.31.1"
anyhow = "1.0"
bs58 = "0.5"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-clap-v3-utils = "2.3"
solana-client = "2.3"
solana-sdk = "2.3"
solana-system-interface = "1.0.0"
stake_program_project = { path = "../programs/stake_program_project", features = ["no-entrypoint"] }
tokio = { version = "1.46", features = ["full"] }
